deployments-ingress/start/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels: 
    run: backend
spec:
  replicas: 3
  selector: # How to select pods belonging to this deployment. Must match the pod template's labels
    matchLabels: # List of labels
      run: backend
  template: 
    metadata:
      labels:
        run: backend
    spec:
      containers:
      - command:
        - /agnhost
        - serve-hostname
        - --http=true
        - --port=8080
        image: registry.k8s.io/e2e-test-images/agnhost:2.39
        name: foo-app
