deployments-ingress/start/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /foo
        backend:
          service:
            name: frontend
            port:
              number: 5000
      - pathType: Prefix
        path: /bar
        backend:
          service:
            name: backend
            port:
              number: 5000
